--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by PyCharm 2.6.3 for binding GitHub repository
+A Big Red Button for XenServer VMs which frequently spin out of control.
